--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ body {
   color: black;
   background-color: lightgreen;
 }
+h1 {
+  font-size: 48px;
+}
+h1 {
+  font-size: 43px;
+}
+h1 {
+  font-size: 38px;
+}
+h4 {
+  font-size: 33px;
+}
