--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,7 @@
   to {background-color: gray;}
 }
 body {
-  color: white;
+  color: #966F5D;
   animation: ani 4s infinite;
   animation-direction: alternate-reverse;
-}
-img {
-  width: 100%;
 }
