--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @keyframes ani {
-  from {background-color: #8A8A8A;}
+  from {background-color: #6E6E6E;}
   to {background-color: #999999;}
 }
 body {
